Added compatibility for the Google Chrome version of the extension

--- a/BreezClickOnceHelper.csproj
+++ b/BreezClickOnceHelper.csproj
@@ -6,7 +6,7 @@
     <ProjectGuid>{75159FED-2B9D-4A1B-84D9-5637AA0F9B8A}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AssemblyName>breezclickoncehelper</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <RootNamespace>BreezClickOnceHelper</RootNamespace>
     <FileUpgradeFlags>
@@ -40,6 +40,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -49,6 +50,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>breezclickonce.ico</ApplicationIcon>
